# fastapi-rest-vs-graphql

./: .env_example  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2025-09-11_create_initial_tables.py  2025-09-22_make_some_movie_fields_nullable.py  6201657db2dd_initial_setup.py
app/: main.py
app/api/: __init__.py  status.py
app/api/graphql/: router.py
app/api/rest/: __init__.py  directors.py  genres.py  movies.py
app/auth/: security.py
app/core/: config.py  logging_setup.py
app/db/: base_model.py  session.py  utils.py
app/graphql/modules/: base_type.py
app/graphql/modules/director/: mutations.py  queries.py  types.py
app/graphql/modules/genre/: mutations.py  queries.py  types.py
app/graphql/modules/movie/: mutations.py  queries.py  types.py
app/models/: __init__.py  association_tables.py  director.py  genre.py  mixins.py  movie.py
app/repository/: base_repo.py  directors.py  genres.py  movies.py
app/rest/repository/: base_repo.py  directors.py  genres.py  movies.py
app/rest/schemas/: base_schema.py  directors.py  genres.py  movies.py
app/rest/services/: directors.py  genres.py  movies.py
app/schemas/: base_schema.py  directors.py  genres.py  movies.py
app/services/: directors.py  genres.py  movies.py
data/: dummy_data.csv  get_dummy_data.py
