[project]
name = "fastapi-rest-vs-graphql"
version = "0.1.0"
description = ""
authors = [
    {name = "Heval Hazal Kurt",email = "hevalhazal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "strawberry-graphql[fastapi] (>=0.282.0,<0.283.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
mypy = "^1.17.1"

